style: adjusted navbar desktop display

--- a/components/layout/brandNavbar/brandNavbar.module.scss
+++ b/components/layout/brandNavbar/brandNavbar.module.scss
@@ -107,8 +107,6 @@
         Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
         "Segoe UI Symbol";
       @include desktop {
-        width: 35%;
-        background: transparent;
         position: relative;
         flex-direction: row;
         height: initial;
@@ -121,19 +119,19 @@
         }
       }
       .mainNavigation {
-        li {
-          list-style: none;
-          height: 100%;
-          width: 100%;
-          flex-grow: 1;
-          text-align: center;
-          transition: opacity 0.5s;
-          a {
-            @include desktop {
-              padding: 0 2rem;
+          li {
+            list-style: none;
+            height: 100%;
+           
+            text-align: center;
+            transition: opacity 0.5s;
+            a {
+              @include desktop {
+                display:block;
+                padding:0 2rem;
+              }
             }
           }
-        }
         padding: 5rem 0 60vh 1rem;
         display: flex;
         background: white;
@@ -143,10 +141,10 @@
         width: 90%;
         height: 100%;
         @include desktop {
-          width: 100%;
+          width: 70%;
           flex-direction: row;
-          justify-content: space-between;
-          background: transparent;
+          justify-content: space-evenly;
+          background:transparent;
           padding: 0;
         }
         .copyright {
