style: new semi-bold helper class

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -262,6 +262,9 @@
 /*
   <<<<<<<<<<<<<<<<GENERIC HELPER CLASSES>>>>>>>>>>>>>>>>>
 */
+.semi-bold{
+  font-weight:600;
+}
 .bold {
   font-weight: bold;
 }
