--- a/components/agility-pageModules/blankCards/blankCards.module.scss
+++ b/components/agility-pageModules/blankCards/blankCards.module.scss
@@ -1,6 +1,8 @@
 @import "../../../styles/settings/colors";
 @import "../../../styles/settings/mixins";
-
+.containerPosition{
+  position:relative;
+}
 .cardGrid {
   display: flex;
   $card-gap: 2rem;
@@ -219,9 +221,21 @@
   }
 }
 .headingContainer {
+  position: relative;
   margin-bottom: 2rem;
   display: flex;
   p {
     font-weight: 600;
   }
+}
+.description{
+  margin-bottom:1rem;
+  text-align:left;
+  @include desktop{
+    position:absolute;
+    max-width:65ch;
+    right:0;
+  }
+  
+  font-weight:400;
 }
