--- a/components/agility-pageModules/jobOpeningList/jobOpeningList.module.scss
+++ b/components/agility-pageModules/jobOpeningList/jobOpeningList.module.scss
@@ -2,44 +2,24 @@
 @import "../../../styles/settings/colors";
 
 .jobOpeningList {
-  .locationCategory {
-    &:not(:last-child):not(:only-child) {
-      margin-bottom: 3rem;
+  select {
+    width: auto;
+  }
+  select, input, .jobOpenings th {
+    @include focus-visible-touch-outlines();
+  }
+  .jobOpenings {
+    width: 100%;
+    th {
+      cursor: pointer;
+      user-select: none;
     }
-    .jobOpenings {
-      display: grid;
-      gap: 2rem;
-      grid-template-columns: 1fr;
-      @include tablet() {
-        grid-template-columns: 1fr 1fr 1fr;
+    .jobOpening {
+      td {
+        width: 50%;
       }
-      .jobOpening {
-        display: flex;
-        flex-direction: column;
-        padding: 2rem;
-        @include shadow();
-        p {
-          font-size: 1.25rem;
-        }
-        span {
-          position: relative;
-          display: flex;
-          align-items: center;
-          font-weight: 600;
-          color: $color-darkblue;
-          margin-top: 1rem;
-          &::after {
-            content: "";
-            display: block;
-            padding: 0.3rem;
-            border-right: solid;
-            border-top: solid;
-            margin-left: 0.2rem;
-            border-width: 0.1rem;
-            border-color: $color-darkblue;
-            transform: rotate(45deg);
-          }
-        }
+      p {
+        font-size: 1.25rem;
       }
     }
   }
