added global oneTrust styles

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,7 @@
 @import "./settings/__settings";
 @import "typography";
 @import "marketo";
+@import "oneTrust";
 @import "layout";
 @import "animations";
 @import "./components/__components-dir";
