style: new color and bg class added

--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -12,6 +12,8 @@ $color-darkgray: #777;
 $color-darkmedium: #bbb;
 $color-darkmediumgray: #bbb;
 $color-mediumgray: #e5e5e5;
+$color-lightmedium:#f2f4ff;
+$color-lightmediumgray:#f2f4ff;
 $color-lightgray: #f6f6f6;
 $color-red: #ff0000; // Use for Error messages and Error selectors
 $color-green: #427f11; // Use for valid messages and success icon
@@ -19,6 +21,7 @@ $color-purple: #5a0bdc;
 $color-darkpurple: #14012b;
 $color-lightpurple: #9b58ea;
 $color-mediumpurple: #6e0bdc;
+
 
 .bg-paleblue {
   background-color: #f0f6ff !important; // $color-paleblue: not pale enough...;
@@ -58,6 +61,9 @@ $color-mediumpurple: #6e0bdc;
 }
 .bg-darkmedium {
   background-color: $color-darkmedium !important;
+}
+.bg-lightmedium{
+  background-color: $color-lightmedium !important;
 }
 .bg-mediumgray {
   background-color: $color-mediumgray !important;
