style: adjusted brand typography

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -491,7 +491,7 @@ mark {
   h4,
   h5,
   h6 {
-    font-family: "DM Sans", sans-serif;
+    font-family: "Montserrat","DM Sans", sans-serif;
   }
   h1{
     @include desktop{
