style: added a new bg-color class

--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -26,6 +26,9 @@ $color-mediumpurple: #6e0bdc;
 .bg-paleblue {
   background-color: #f0f6ff !important; // $color-paleblue: not pale enough...;
 }
+.bg-palelightblue{
+  background-color:#e1ecfe !important;
+}
 .bg-skyblue-light {
   background-color: $color-paleblue;
 }
