--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -2,9 +2,9 @@
 @import "../../../styles/settings/colors";
 
 .textWithMedia {
-  .brandHeading{
-    margin:0;
-    p{
+  .brandHeading {
+    margin: 0;
+    p {
       font-size: 0.9em;
       font-weight: 500;
     }
@@ -59,7 +59,6 @@
           left: 50%;
           min-height: 100%;
           min-width: 100%;
-          
           img {
             object-fit: cover;
             margin-block: unset;
@@ -68,15 +67,25 @@
       }
     }
   }
-  .brandWidthContent{
-    @include desktop{
-      margin-bottom:2rem;
+  .brandWidthContent {
+    @include desktop {
+      margin-bottom: 2rem;
     }
     @include touch() {
       flex-direction: column;
     }
     .brandWidthMedia {
       display: flex;
+      &.posAbsolute {
+        @include desktop() {
+          & > * {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
+        }
+      }
       @include desktop() {
         position: relative;
         display: inline-block;
@@ -84,12 +93,8 @@
         margin: 0;
         & > * {
           display: block;
-          position: absolute;
-          top: 50%;
-          left: 50%;
           min-height: 100%;
           min-width: 100%;
-          transform: translate(-50%, -50%);
           img {
             object-fit: cover;
             margin-block: unset;
@@ -103,7 +108,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    &.backgroundPadding{
+    &.backgroundPadding {
       padding: 10% 0;
     }
     &.textContentBasis30 {
@@ -261,28 +266,27 @@
     }
   }
 }
-.mediaBackgroundContainer{
-  position:relative;
-  overflow:hidden;
-  padding:0;
-  color:white;
-  @include desktop{
-    min-height:65vh;
-    
+.mediaBackgroundContainer {
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+  color: white;
+  @include desktop {
+    min-height: 65vh;
   }
-  
+
   //Mobile view needs work
-  .mediaBackground{
+  .mediaBackground {
     position: absolute;
-    top:0;
-    left:0;
-    z-index:-1;
+    top: 0;
+    left: 0;
+    z-index: -1;
     pointer-events: none;
-    & > *{
+    & > * {
       min-width: 100vw;
-      min-height:100vh;
-      @include desktop{
-        min-height:unset;
+      min-height: 100vh;
+      @include desktop {
+        min-height: unset;
       }
     }
   }
