updated button styles and column alignment for textGridWithMedia

--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -107,9 +107,9 @@
 
   @include desktop() {
     flex-direction: row;
-    .cookies {
+    /* .cookies {
       flex-basis: 20%;
-    }
+    } */
     .footNoteLinks {
       flex-basis: 80%;
     }
