Add job page form (no submit functionality yet)

--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -14,7 +14,9 @@ $color-darkmediumgray: #bbb;
 $color-mediumgray: #e5e5e5;
 $color-lightgray: #f6f6f6;
 $color-red: #ff0000; // Use for Error messages and Error selectors
+$color-lightred: #ffe7e7;
 $color-green: #427f11; // Use for valid messages and success icon
+$color-lightgreen: #e8f5dd;
 $color-purple: #5a0bdc;
 $color-darkpurple: #14012b;
 $color-lightpurple: #9b58ea;
