--- a/components/scrollToTop/scrollToTop.module.scss
+++ b/components/scrollToTop/scrollToTop.module.scss
@@ -3,12 +3,15 @@
 @import "../../styles/settings/variables";
 
 .scrollToTopButton {
+  display:block;
   transition: opacity 0.7s;
   position: fixed;
   left: -121417px;
   transform: rotate(-90deg);
   color: $color-black;
-  background: transparent;
+  background:transparent;
+display:flex;
+flex-direction: row-reverse;
   border: 0;
   cursor: pointer;
   opacity: 1;
@@ -22,17 +25,27 @@
     top: 45vh;
     z-index: 2;
   }
-  .progressBarContainer {
-    background: $color-paleblue;
-    width: 7vh;
+  .progressBarWrapper{
+    //Used to increase progressbar hitbox
     position: fixed;
-    height: 0.10rem;
-    z-index: 2;
-    left:-121417px;
-    transform: rotate(180deg);
-    @include desktop {
-      left: -4rem;
-      top: .55vw;
+    width:10vh;
+    height:1.05vw;
+    left: -6rem;
+        top:0;
+    .progressBarContainer {
+      display:block;
+      background: $color-paleblue;
+      width: 7vh;
+      position: fixed;
+      height: 0.10rem;
+      z-index: 2;
+      left:-121417px;
+      transform: rotate(180deg);
+      @include desktop {
+        left: -5rem;
+        top: .55vw;
+      }
     }
   }
+  
 }
