--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -116,6 +116,7 @@
         margin: 0;
         & > * {
           display: block;
+          
           min-height: 100%;
           min-width: 100%;
           img {
@@ -180,7 +181,9 @@
     align-items: center;
     justify-content: center;
     flex-grow: 1;
-
+    &.roundBorders{
+      border-radius: 1rem;
+    }
     // Vertical align conf
     &.mediaBasis30 {
       flex-basis: 30%;
