style: added brandwidth layout class

--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -128,7 +128,10 @@
     }
   }
 
-  .textContent {
+  .textContent {  
+    &.brandWidthTextContent{
+      justify-content: center !important;
+    }
     display: flex;
     flex-direction: column;
     justify-content: center;
