style: added extra bold class

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -268,7 +268,9 @@
 .bold {
   font-weight: bold;
 }
-
+.extra-bold{
+  font-weight:800;
+}
 .b-r-30px {
   border-radius: toRem(30);
   overflow: hidden;
