style: brand layout stylinfg

--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -129,7 +129,8 @@
   }
 
   .textContent {  
-    &.brandWidthTextContent{
+    &.brandWidthTextContent{  
+      letter-spacing: -.035em;
       justify-content: center !important;
     }
     display: flex;
