--- a/components/agility-pageModules/jobOpeningList/jobOpeningList.module.scss
+++ b/components/agility-pageModules/jobOpeningList/jobOpeningList.module.scss
@@ -11,6 +11,25 @@
     height: 2.8rem;
     padding: 0 0.5rem;
   }
+  .headerContentWrapper {
+    .sort {
+      background: transparent;
+      border: 0;
+      outline: 0;
+      span {
+        display: block;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 10px 6px 0 6px;
+        border-color: #ffffff transparent transparent transparent;
+        &.dsc {
+          border-width: 0 6px 10px 6px;
+          border-color: transparent transparent #ffffff transparent;
+        }
+      }
+    }
+  }
   input {
     position: absolute;
     top: 0;
