--- a/components/agility-pageModules/jobOpeningList/jobOpeningList.module.scss
+++ b/components/agility-pageModules/jobOpeningList/jobOpeningList.module.scss
@@ -23,7 +23,7 @@
         border-style: solid;
         border-width: 10px 6px 0 6px;
         border-color: #ffffff transparent transparent transparent;
-        &.dsc {
+        &.asc {
           border-width: 0 6px 10px 6px;
           border-color: transparent transparent #ffffff transparent;
         }
