--- a/components/genericCard/genericCard.module.scss
+++ b/components/genericCard/genericCard.module.scss
@@ -101,7 +101,7 @@
           font-weight: 700;
           color: $color-navy;
           align-self: center;
-          transition: opacity 0.5s ease-in;
+          transition: opacity 0.3s;
           &:hover {
             text-decoration: underline;
             opacity: 0.7;
