--- a/components/agility-pageModules/blankCards/blankCards.module.scss
+++ b/components/agility-pageModules/blankCards/blankCards.module.scss
@@ -197,20 +197,22 @@
 }
 .headingContainer {
   position: relative;
+  margin-bottom: 1rem;
+ @include desktop{
   margin-bottom: 2rem;
+ }
   display: flex;
   p {
     font-weight: 600;
   }
 }
 .description {
-  margin-bottom: 1rem;
   text-align: left;
   @include desktop {
     position: absolute;
     max-width: 40%;
     right: 0;
+    top:0;
   }
-
   font-weight: 400;
 }
