--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -498,8 +498,12 @@ mark {
     @include desktop{
       font-size:6.55rem;
     }
-    
     line-height:1;
+  }
+  h2{
+    @include mobile{
+      font-size: 2rem;
+    }
   }
   p {
     font-size:1rem;
